gitops/namespaces/base/flux-system/webhook/gitlab/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: "traefik"
  rules:
  - host: "flux-receiver.${SECRET_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
  - hosts:
    - "flux-receiver-${CLUSTER_NAME}.kutara.io"
    secretName: flux-receiver-${CLUSTER_NAME}-tls
